{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 81,
  "lineage": "1a1cb904-97b5-03c4-b5a9-47ca389464c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a85646063fce351a",
            "domain": "vpc",
            "id": "eipalloc-0b7df5954a72d80c9",
            "network_interface": "eni-0e8c5b54c60fdadf7",
            "private_dns": "ip-10-0-1-107.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-18-182-171-238.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.171.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:internet-gateway/igw-0ac6da31b784b3a75",
            "id": "igw-0ac6da31b784b3a75",
            "owner_id": "543300565893",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7df5954a72d80c9",
            "id": "nat-027b0b2f98356406f",
            "network_interface_id": "eni-0e8c5b54c60fdadf7",
            "private_ip": "10.0.1.107",
            "public_ip": "18.182.171.238",
            "subnet_id": "subnet-04124940c517a2c3e",
            "tags": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a3fd80ea0077168",
            "owner_id": "543300565893",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-027b0b2f98356406f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092e742245f80f6fd",
            "owner_id": "543300565893",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac6da31b784b3a75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94984ef0d192a59",
            "route_table_id": "rtb-03a3fd80ea0077168",
            "subnet_id": "subnet-0130411537d22886b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba7c56106fd5c19",
            "route_table_id": "rtb-03a3fd80ea0077168",
            "subnet_id": "subnet-0465411d3ec9f91b8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cef0ebf051f9b4a",
            "route_table_id": "rtb-092e742245f80f6fd",
            "subnet_id": "subnet-04124940c517a2c3e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b434d44015996d08",
            "route_table_id": "rtb-092e742245f80f6fd",
            "subnet_id": "subnet-002afcf810a4fb566"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e52875931ec2c742",
            "route_table_id": "rtb-092e742245f80f6fd",
            "subnet_id": "subnet-06cca5151b9e3c6e1"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:subnet/subnet-0130411537d22886b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0130411537d22886b",
            "map_public_ip_on_launch": false,
            "owner_id": "543300565893",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:subnet/subnet-0465411d3ec9f91b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0465411d3ec9f91b8",
            "map_public_ip_on_launch": false,
            "owner_id": "543300565893",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:subnet/subnet-04124940c517a2c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04124940c517a2c3e",
            "map_public_ip_on_launch": true,
            "owner_id": "543300565893",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:subnet/subnet-002afcf810a4fb566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-002afcf810a4fb566",
            "map_public_ip_on_launch": true,
            "owner_id": "543300565893",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:subnet/subnet-06cca5151b9e3c6e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06cca5151b9e3c6e1",
            "map_public_ip_on_launch": true,
            "owner_id": "543300565893",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-01ec6a2ff3e8c8017"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:543300565893:vpc/vpc-01ec6a2ff3e8c8017",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05355ef1618ead420",
            "default_route_table_id": "rtb-08b25e67918459557",
            "default_security_group_id": "sg-00c95e08ae9b4bab8",
            "dhcp_options_id": "dopt-22c77f45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01ec6a2ff3e8c8017",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08b25e67918459557",
            "owner_id": "543300565893",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}